syntax = "proto3";

option go_package = "smapp/common/grpc/image";

service Image {
    rpc CheckObjectExists(ObjectExistsRequest) returns (ObjectExistsResponse);
}

message ObjectExistsRequest {
    string bucket = 1;
    string key = 2;
}

message ObjectExistsResponse {}